--- a/Index.html
+++ b/Index.html
@@ -3,104 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be My Valentine?</title>
+    <title>Will You Be My Valentine?</title>
     <style>
+        :root {
+            --pink: #ff4d6d;
+            --light-pink: #fff0f3;
+        }
+
         body {
             margin: 0;
-            height: 100vh;
+            padding: 0;
             display: flex;
-            align-items: center;
             justify-content: center;
-            background-color: #fff0f3;
-            font-family: 'Arial', sans-serif;
+            align-items: center;
+            height: 100vh;
+            background-color: var(--light-pink);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             overflow: hidden;
             text-align: center;
         }
 
-        .card {
+        .container {
             background: white;
-            padding: 30px;
+            padding: 40px;
             border-radius: 30px;
             box-shadow: 0 10px 30px rgba(255, 77, 109, 0.2);
-            z-index: 10;
-            width: 90%;
             max-width: 400px;
+            width: 90%;
+            transition: all 0.3s ease;
         }
 
-        h1 { color: #ff4d6d; font-size: 24px; }
+        img {
+            width: 180px;
+            margin-bottom: 20px;
+            border-radius: 15px;
+        }
 
-        .btn-container {
+        h1 {
+            color: var(--pink);
+            font-size: 2rem;
+            margin-bottom: 30px;
+        }
+
+        .buttons {
             display: flex;
-            justify-content: center;
             gap: 20px;
-            margin-top: 25px;
-            position: relative;
-            height: 60px;
+            justify-content: center;
+            align-items: center;
+            min-height: 100px;
         }
 
         button {
             padding: 12px 25px;
-            font-size: 1.1rem;
-            border: none;
-            border-radius: 15px;
-            cursor: pointer;
+            font-size: 1.2rem;
             font-weight: bold;
-            transition: transform 0.2s;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
-        #yesBtn { background-color: #ff4d6d; color: white; }
+        #yesBtn {
+            background-color: #4caf50;
+            color: white;
+            z-index: 999;
+        }
 
         #noBtn {
-            background-color: #adb5bd;
+            background-color: var(--pink);
             color: white;
-            position: absolute; /* Changed to absolute for easier moving */
-            right: 60px;
+            position: relative;
         }
 
-        img { width: 200px; height: auto; margin-bottom: 15px; border-radius: 20px; }
+        .hidden { display: none; }
     </style>
 </head>
 <body>
 
-    <div class="card" id="content">
-        <img id="mainGif" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3NueW56cjRreHd0NHR6bmZ3dmRzZ2ZneHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/KzM1lAfJjCW3Ic7cH6/giphy.gif" alt="Cute Bear">
-        <h1 id="questionText">Will you be my Valentine? ❤️</h1>
-        <div class="btn-container">
-            <button id="yesBtn" onclick="accepted()">Yes</button>
-            <button id="noBtn" onmouseover="dodge()">No</button>
+    <div class="container" id="card">
+        <img id="main-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpwaHpxZ3M3ZzZ4Nzh4bmh4eGZ4eGZ4eGZ4eGZ4eGZ4eGZ4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/c76IJLufpNUMo/giphy.gif" alt="Asking bear">
+        
+        <h1 id="question">Will you be my Valentine? ❤️</h1>
+
+        <div class="buttons">
+            <button id="yesBtn" onclick="celebrate()">Yes</button>
+            <button id="noBtn" onmouseover="handleNo()" onclick="handleNo()">No</button>
         </div>
     </div>
 
     <script>
         let yesScale = 1;
-        const noMessages = ["No", "Are you sure?", "Pwease?", "Think again!", "Last chance!", "Pretty please?"];
-        let msgIndex = 0;
+        const noPhrases = [
+            "No", "Are you sure?", "Really sure??", "Think again!", 
+            "Last chance!", "Surely not?", "You're breaking my heart ;(",
+            "PWEASE 🥺", "Don't do this!"
+        ];
+        let phraseIndex = 0;
 
-        function dodge() {
+        function handleNo() {
             const noBtn = document.getElementById('noBtn');
             const yesBtn = document.getElementById('yesBtn');
 
-            // Move the No button anywhere inside the screen
-            const x = Math.random() * (window.innerWidth - 100);
-            const y = Math.random() * (window.innerHeight - 50);
+            // 1. Move No button to random position
+            const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+            const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
             
-            noBtn.style.position = 'fixed';
-            noBtn.style.left = x + 'px';
+            noBtn.style.position = "fixed";
+            noBtn.style.left = x + "px";
             noBtn.style.top = y + 'px';
 
-            // Make Yes button grow bigger
-            yesScale += 0.4;
-            yesBtn.style.transform = `scale(${yesScale})`;
+            // 2. Change text
+            noBtn.innerText = noPhrases[phraseIndex];
+            phraseIndex = (phraseIndex + 1) % noPhrases.length;
 
-            // Change text on No button
-            noBtn.innerText = noMessages[msgIndex];
-            msgIndex = (msgIndex + 1) % noMessages.length;
+            // 3. Make Yes button bigger
+            yesScale += 0.5;
+            yesBtn.style.transform = `scale(${yesScale})`;
         }
 
-        function accepted() {
-            document.getElementById('content').innerHTML = `
-                <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3NueW56cjRreHd0NHR6bmZ3dmRzZ2ZneHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/MDJ9IbZY5ZqzdnzOux/giphy.gif" alt="Happy Cat">
-                <h1 style="color: #ff4d6d;">Yay! See you soon! ❤️🌹</h1>
+        function celebrate() {
+            const card = document.getElementById('card');
+            card.innerHTML = `
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmtuYmx4Z2Y5bXF4eGZ4eGZ4eGZ4eGZ4eGZ4eGZ4eGZ4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/l0HlIDueXKHuLTuZq/giphy.gif" alt="Happy Cat">
+                <h1>Yay! See you then! 🥰🌹</h1>
+                <p>Check your texts!</p>
             `;
         }
     </script>
